[project]
name = "neo-mamba"
description = "Python SDK for the NEO 3 blockchain"
readme = "README.rst"
requires-python = ">= 3.11.0,<= 3.13"
license = { file = "LICENSE.md" }
keywords = ["NEO", "NEO3", "blockchain", "SDK"]
authors = [
    { name = "Erik van den Brink", email = "erik@coz.io" },
]
maintainers = [
    { name = "Erik van den Brink", email = "erik@coz.io" },
]
dynamic = ["version"]
dependencies = [
    "aiodns==3.2.0",
    "aiohttp==3.10.5",
    "base58==2.1.1",
    "bitarray==2.9.2",
    "Events==0.5",
    "jsonschema==4.23.0",
    "lz4==4.3.3",
    "neo3crypto==0.4.3",
    "netaddr==1.3.0",
    "orjson>=3.10.7",
    "pycryptodome==3.20.0",
    "pybiginteger==1.3.3",
    "pybiginteger-stubs==1.3.3",
]

[project.optional-dependencies]
dev = [
    "aioresponses==0.7.6",
    "black==23.9.1",
    "build==0.10.0",
    "bump-my-version==0.12.0",
    "coverage>=7.3.2",
    "docutils==0.17.1",
    "mypy==1.7.1",
    "mypy-extensions==1.0.0",
]
docs = [
    "mkdocs==1.4.1",
    "mkdocs-material==8.5.7",
    "mkdocs-material-extensions==1.1",
    "mkapi-fix-coz==0.1.0",
]

[project.urls]
repository = "https://github.com/CityOfZion/neo-mamba"
documentation = "https://mamba.coz.io/"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py311']

[tool.setuptools.dynamic]
version = { attr = "neo3.__version__" }

[tool.bumpversion]
current_version = "2.7.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "./neo3/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[tool.mypy]
check_untyped_defs = true
disable_error_code = "func-returns-value"

[tool.coverage.run]
source = ["neo3"]

[tool.coverage.report]
omit = ["neo3/core/cryptography/ecc*"]