[bumpversion]
current_version = 0.11.0
commit = True
tag = True

[pycodestyle]
ignore = E721,E402,W291,E704, W503

[metadata]
name = neo3
version = attr: neo3.__version__
description = Python SDK for the NEO 3 blockchain
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Erik van den Brink
author_email = erik@coz.io
maintainer = Erik van den Brink
maintainer_email = erik@coz.io
url = https://github.com/CityOfZion/neo-mamba
license = MIT License
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	aiodns==3.0.0
	aiohttp==3.7.4.post0
	asynctest==0.13.0
	base58==2.1.0
	bitarray==2.6.0
	Events==0.4
	jsonschema>=3.2.0
	lz4==4.0.2
	neo3crypto==0.3
	netaddr>=0.8.0
	orjson>=3.4.6
	pycryptodome==3.11.0
	pybiginteger==1.2.7
	pybiginteger-stubs==1.2.7

[options.extras_require]
dev = 
	aioresponses==0.7.2
	build==0.8.0
	bump2version==1.0.1
	coverage>=6.0.1
	docutils==0.17.1
	mypy>=0.950
	mypy-extensions==0.4.3
	pycodestyle==2.8.0
docs = 
	jinja2<3.1
	Sphinx==5.1.1
	sphinx-autodoc-typehints==1.11.1

[options.entry_points]
sphinx.html_themes = 
	neo3 = docs.source._theme

[coverage:run]
source = neo3

[coverage:report]
omit = 
	neo3/core/cryptography/ecc*

[bumpversion:file:./neo3/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
