[bumpversion]
current_version = 1.1.0
commit = True
tag = True

[metadata]
name = neo-mamba
version = attr: neo3.__version__
description = Python SDK for the NEO 3 blockchain
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Erik van den Brink
author_email = erik@coz.io
maintainer = Erik van den Brink
maintainer_email = erik@coz.io
url = https://github.com/CityOfZion/neo-mamba
license = MIT License
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.10.0,<= 3.12
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	aiodns==3.0.0
	aiohttp==3.7.4.post0
	base58==2.1.0
	bitarray==2.6.0
	Events==0.4
	jsonschema>=3.2.0
	lz4==4.0.2
	neo3crypto==0.4
	netaddr>=0.8.0
	orjson>=3.8.2
	pycryptodome==3.15.0
	pybiginteger==1.3.0
	pybiginteger-stubs==1.3.0

[options.extras_require]
dev = 
	aioresponses==0.7.2
	black==22.8.0
	build==0.8.0
	bump2version==1.0.1
	coverage>=6.0.1
	docutils==0.17.1
	mypy==0.990
	mypy-extensions==0.4.3
docs = 
	mkdocs==1.4.1
	mkdocs-material==8.5.7
	mkdocs-material-extensions==1.1
	mkapi-fix-coz==0.1.0

[coverage:run]
source = neo3

[coverage:report]
omit = 
	neo3/core/cryptography/ecc*

[bumpversion:file:./neo3/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[mypy]
check_untyped_defs = True
